# template-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Pipfile  README.md  cspell.json  mkdocs.yml  mypy.ini  pylock.ci.toml  pylock.docs.toml  pylock.production.toml  pylock.toml  pyproject.toml  setup.py  vercel.json  zensical.toml
.github/: CONTRIBUTING.md  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  hooks.yml  pre-commit.yml  test.yml  tests.yml
docs/: index.md
examples/: fibonacci.py  fizzbuzz.py  palindrome.py
src/template_python/examples/: fibonacci.py  fizzbuzz.py  palindrome.py
template_python/examples/: fibonacci.py  palindrome.py
templatepython/: __init__.py
templatepython/examples/: palindrome.py
tests/: test_examples.py  test_fizzbuzz.py  test_palindrome.py  test_version.py
tests/examples/: test_fibonacci.py  test_fizzbuzz.py  test_palindrome.py
