[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{email = "you@example.com", name = "Your Name"}]
dependencies = []
description = "Your project description here."
dynamic = ["version"]
license = "MIT"
name = "template-python"
readme = "README.md"
requires-python = ">=3.10,<4"

[project.optional-dependencies]
checks = [
  "black>=22,<23",
  "flake8>=6,<7",
  "isort>=5,<6",
  "mypy==0.991",
  "pre-commit>=2,<3",
]
docs = [
  "mkdocs-material>=8,<9",
]
tests = [
  "coverage[toml]>=6,<7",
  "httpx>=0.23,<24",
  "pytest>=7,<8",
  "pytest-mock>=3,<4",
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]
fail_under = 70
show_missing = true

[tool.coverage.run]
command_line = "-m pytest"
source = ["template_python", "tests"]

[tool.hatch.build.targets.sdist]
include = ["/template_python"]

[tool.hatch.envs.ci]
dev-mode = false
features = [
  "checks",
  "tests",
]
path = ".venv"

[tool.hatch.envs.default]
dev-mode = true
features = [
  "checks",
  "docs",
  "tests",
]
path = ".venv"

[tool.hatch.envs.production]
dev-mode = false
features = []
path = ".venv"

[tool.hatch.version]
path = "template_python/__init__.py"

[tool.isort]
profile = "black"
src_paths = ["template_python", "tests"]

[tool.mypy]
files = ["**/*.py"]
show_error_codes = true
strict = true

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]
